# Telegram-Shop-Bot

./: .dockerignore  .env.example  .gitignore  Caddyfile  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py  test_data.py
backend/app/: config.py  database.py  main.py
backend/app/admin_api/: auth.py  main.py  telegram_auth.py
backend/app/admin_api/routes/: cart.py  consultation.py  dashboard.py  orders.py  products.py  public_products.py  upload.py
backend/app/admin_api/utils/: excel_parser.py
backend/app/bot/handlers/: __init__.py  cart.py  catalog.py  consultant.py  order.py  start.py  user_orders.py
backend/app/bot/keyboards/: inline.py
backend/app/bot/middleware/: user.py
backend/app/bot/states/: user_states.py
backend/app/bot/utils/: consultant_render.py  messages.py  telegram.py
backend/app/models/: order.py  product.py  user.py
backend/app/repositories/: product_repo.py  user_repo.py
backend/app/services/: ai_consultant.py  attrs_extractor.py  consultant_dialog.py  image_service.py  notification_service.py  order_service.py  product_service.py  user_service.py
backend/app/services/cctv_advisor/: __init__.py  storage_calc.py  system_prompt.py
backend/app/utils/: logger.py
backend/data/uploads/: .tmp2mybo8ve.xlsx.icloud  .tmpk2t_d_bg.xlsx.icloud  .tmpoc1kloy8.xlsx.icloud  .tmppg8u5s81.xlsx.icloud  .tmpr69tk1no.xlsx.icloud  .tmpsp1ps5j1.xlsx.icloud  .tmpuw7ixncv.xlsx.icloud  .tmpwqx74wvm.xlsx.icloud  .tmpzjk_44g1.xlsx.icloud  template_pricelist.xlsx
backend/scripts/: backfill_attrs.py  resync_categories.py
(+33 files in other folders)
